--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/google-protobuf": "^3.15.12",
     "@types/jsonwebtoken": "^9.0.6",
+    "amqplib": "^0.10.3",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "express-async-handler": "^1.2.0",
     "grpc-tools": "^1.12.4",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1",
@@ -25,6 +27,7 @@
     "path": "^0.12.7"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.5",
     "@types/express": "^4.17.21",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.2"
