--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.534.0",
+    "@aws-sdk/s3-request-presigner": "^3.534.0",
     "@grpc/grpc-js": "^1.10.1",
     "@grpc/proto-loader": "^0.7.10",
     "@types/bcryptjs": "^2.4.6",
@@ -17,6 +19,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "amqplib": "^0.10.3",
     "bcryptjs": "^2.4.3",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "express-async-handler": "^1.2.0",
@@ -24,7 +27,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1",
     "nodemon": "^3.1.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "sharp": "^0.33.2"
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.5",
